# blueskyscryfallbot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
docs/: work_plan.md
src/bot/: bluesky_client.py  bot.py  card_formatter.py  card_lookup.py  config.py  main.py  metrics.py  query_parser.py  rate_limiter.py
tests/: test_bluesky_client.py  test_bot.py  test_card_formatter.py  test_card_lookup.py  test_config.py  test_metrics.py  test_query_parser.py  test_rate_limiter.py
