[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scryfallbot"
version = "0.1.0"
description = "A Bluesky bot that looks up Magic: The Gathering cards via the Scryfall API"
license = "Apache-2.0"
authors = [
    { name = "Taya Steere" }
]
requires-python = ">=3.11"
dependencies = [
    "atproto==0.0.65",
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/tayasteere/blueskyscryfallbot"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["src/bot/main.py"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
